Add to favorite button is working.

--- a/templates/base.html
+++ b/templates/base.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   <link rel="stylesheet" href="static/base.css">
-  
 {% block head %}
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -27,5 +27,7 @@
       </div>
 {% endblock %}
 <script src="https://code.jquery.com/jquery.js"></script>
+<script src="/static/favorite.js"></script>
+<script src="/static/numLike.js"></script>
 </body>
 </html>
