--- a/templates/profile.html
+++ b/templates/profile.html
@@ -5,14 +5,13 @@
 <br>
 <div class="well spaced" style="width:80%">
   <div class=col-xs-offset-6 col-xs-6>
-    <form action="/see_favlist" method="GET">
-      <a href="/favlist">My Favorites</a><br>
-    </form>
+    <a href="/list_favlist/{{ user.user_id }}">My Favorites</a><br>
   </div>
 </div>
 <div class="well spaced" style="width:80%">
-  <p>Last Login: {{ user.last_login }}</p>
+  <p>Last Login: {{ last_login }}</p>
   <h2>Account Details</h2>
+  <p>Name: {{ user.fname }} {{ user.lname }}</p>
   <p>Username: {{ user.username }}</p>
   <p>Favorite Cuisine: {{ user.fav_cuisine }}</p>
   <b>Recent Ratings</b><br>
@@ -27,6 +26,7 @@
     {% for c in user.comments %}
       <p>{{ c.comment }}</p>
     {% endfor %}
+    <p>Member Since: {{ membership }}</p>
   </div>
 </div>
 
