--- a/templates/restaurant_info.html
+++ b/templates/restaurant_info.html
@@ -1,22 +1,22 @@
 {% extends "base.html" %}
 {% block content %}
 <style>
-      #map {
-        height: 300px;
-      }
-      html, body {
-        height: 100%; margin: 30px; padding: 10px;
-      }
-      #restaurant-pic{
-        width:300px;
-        height:300px;
-      }
+  #map {
+    height: 300px;
+  }
+  html, body {
+    height: 100%; margin: 30px; padding: 10px;
+  }
+  #restaurant-pic{
+    width:300px;
+    height:300px;
+  }
 </style>
   <div>
     {% if "current_user" in session %}
-      <button id="fav-restaurant" class="favorite-btn">&hearts; Add to Favorite</button><br>
-        <a href="/comments/{{ exist_rest.restaurant_id }}">New Comment</a><br>
-        <a href="/ratings/{{ exist_rest.restaurant_id }}">New Rating</a>
+      <button id="fav-restaurant" class="favorite-btn" value="{{ exist_rest.restaurant_id}}">&hearts; Add to Favorite</button><br>
+      <a href="/comments/{{ exist_rest.restaurant_id }}">New Comment</a><br>
+      <a href="/ratings/{{ exist_rest.restaurant_id }}">New Rating</a>
     {% endif %}
     </div>
   <div class="row">
@@ -35,44 +35,50 @@
                 {{ rest_info['location']['city'] }}, {{ rest_info['location']['state'] }} 
                 {{ rest_info['location']['zip_code'] }}
       {% if "current_user" in session %}
-      <form action="/like_rest" method="POST">
-        <input type="submit" value="Like!">
-      </form>
+      <br>
+      <button id="fav-restaurant" class="glyphicon glyphicon-thumbs-up" style="font-size:24px" value="{{ exist_rest.restaurant_id}}"></button>
       {% endif %}
     </div>
-      <div id="map" class="col-xs-5"></div>
-      <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyATx-dTNuzvPtdyA7R0YmOYH5gD498D4Vs&callback=initMap"
-      async defer></script>
-      <script>
-      var userLatlng = {lat: {{ rest_info['coordinates']['latitude'] }},
-                        lng: {{ rest_info['coordinates']['longitude'] }}};
+    <div id="map" class="col-xs-5"></div>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyATx-dTNuzvPtdyA7R0YmOYH5gD498D4Vs&callback=initMap"
+    async defer></script>
+
+    <script>
+      var userLatlng = {
+        lat: {{ rest_info['coordinates']['latitude'] }},
+        lng: {{ rest_info['coordinates']['longitude'] }}
+      };
+
       var map;
+
       function initMap() {
         map = new google.maps.Map(document.getElementById('map'), {
           center: {lat: userLatlng.lat, lng: userLatlng.lng},
           zoom: 12
-          // zoomControl: true,
-        });
+      });
         var marker = new google.maps.Marker({
           position: userLatlng,
           icon: 'https://cdn3.iconfinder.com/data/icons/google-material-design-icons/48/ic_local_restaurant_48px-32.png',
           map: map
         });
 
-        var contentString = '<div><h2>{{ rest_info['name'] }}</h2></div>' + 
-                 '<p>{{ rest_info['location']['address1'] }}</p>' +
-                 '<p>{{ rest_info['location']['city'] }}, {{ rest_info['location']['state'] }}</p>';
+        var contentString = 
+          '<div><h2>{{ rest_info['name'] }}</h2></div>' + 
+          '<p>{{ rest_info['location']['address1'] }}</p>' +
+          '<p>{{ rest_info['location']['city'] }}, {{ rest_info['location']['state'] }}</p>'
+        ;
+
         var infowindow = new google.maps.InfoWindow({
         content: contentString
-        });
+      });
 
         marker.addListener('click', function() {
         infowindow.open(map, marker);
-        });
-      }
-        </script>
+      });
+    }
+    </script>
+
   </div>
 </div>    
-
 {% endblock %}
 
