--- a/templates/profile.html
+++ b/templates/profile.html
@@ -1,32 +1,33 @@
 {% extends "base.html" %}
-
 {% block content %}
 <h1>User Profile</h1>
 <br>
-<div class="well spaced" style="width:80%">
-  <div class=col-xs-offset-6 col-xs-6>
-    <a href="/list_favlist/{{ user.user_id }}">My Favorites</a><br>
+<div class="row">
+  <div class="well spaced" style="width:80%">
+    <div class=col-xs-6>
+      <a href="/list_favlist/{{ user.user_id }}">My Favorites</a><br>
+    </div>
   </div>
-</div>
-<div class="well spaced" style="width:80%">
-  <p>Last Login: {{ last_login }}</p>
-  <h2>Account Details</h2>
-  <p>Name: {{ user.fname }} {{ user.lname }}</p>
-  <p>Username: {{ user.username }}</p>
-  <p>Favorite Cuisine: {{ user.fav_cuisine }}</p>
-  <b>Recent Ratings</b><br>
-    {% for r in user.ratings %}
-    <p>Restaurant: <b>{{ r.restaurant.name }}</b></p>
-    <p>Cleanliness: {{ r.cleanliness }}</p>
-    <p>Quality: {{ r.quality }}</p>
-    <p>Atmosphere: {{ r.atmosphere }}</p>
-    <p>Consistency: {{ r.consistency }}</p>
-    {% endfor %}
-  <div><b>User Comments</b><br>
-    {% for c in user.comments %}
-      <p>{{ c.comment }}</p>
-    {% endfor %}
-    <p>Member Since: {{ membership }}</p>
+  <div class="well spaced" style="width:80%">
+    <p>Last Login: {{ last_login }}</p>
+    <h2>Account Details</h2>
+    <p>Name: {{ user.fname }} {{ user.lname }}</p>
+    <p>Username: {{ user.username }}</p>
+    <p>Favorite Cuisine: {{ user.fav_cuisine }}</p>
+    <b>Recent Ratings</b><br>
+      {% for r in user.ratings %}
+      <p>Restaurant: <b>{{ r.restaurant.name }}</b></p>
+      <p>Cleanliness: {{ r.cleanliness }}</p>
+      <p>Quality: {{ r.quality }}</p>
+      <p>Atmosphere: {{ r.atmosphere }}</p>
+      <p>Consistency: {{ r.consistency }}</p>
+      {% endfor %}
+    <div><b>User Comments</b><br>
+      {% for c in user.comments %}
+        <p>{{ c.comment }}</p>
+      {% endfor %}
+      <p>Member Since: {{ membership }}</p>
+    </div>
   </div>
 </div>
 
