--- a/templates/restaurant_info.html
+++ b/templates/restaurant_info.html
@@ -12,31 +12,36 @@
     height:300px;
   }
 </style>
-  <div>
-    {% if "current_user" in session %}
-      <button id="fav-restaurant" class="favorite-btn" value="{{ exist_rest.restaurant_id}}">&hearts; Add to Favorite</button><br>
-      <a href="/comments/{{ exist_rest.restaurant_id }}">New Comment</a><br>
-      <a href="/ratings/{{ exist_rest.restaurant_id }}">New Rating</a>
-    {% endif %}
-    </div>
   <div class="row">
     <div class="col-xs-4">
+      {% if "current_user" in session %}
+      <button id="fav-restaurant" class="favorite-btn" value="{{ exist_rest.restaurant_id}}">&hearts; Add to Favorite</button><br>
+      <a href="/comments/{{ exist_rest.restaurant_id }}">New Comment</a>
+      <br>
+      <a href="/ratings/{{ exist_rest.restaurant_id }}">New Rating</a>
+      {% endif %}
       <img id="restaurant-pic" src={{ rest_info['image_url'] }}>
     </div>
   
     <div class="col-xs-3">
       <b>Restaurant Information</b><br>
-      <h2>{{ rest_info['name'] }}</h2>Likes: {{ num_likes }}<br>
+      <h2>{{ rest_info['name'] }}</h2>
+      Likes: <span id="num_likes"></span><br>
       Category: {{ rest_info['categories'][0]['title'] }}<br>
       Phone: {{ rest_info['phone'] }}<br>
       Price Level: {{ rest_info['price'] }}<br>
-      Hours: {{ rest_info['hours'][0]['open'][0]['start']}} - {{ rest_info['hours'][0]['open'][0]['end']}}<br>
-      Location: {{ rest_info['location']['address1'] }}<br>
-                {{ rest_info['location']['city'] }}, {{ rest_info['location']['state'] }} 
-                {{ rest_info['location']['zip_code'] }}
+      Hours: 
+        {{ rest_info['hours'][0]['open'][0]['start']}} 
+        - {{ rest_info['hours'][0]['open'][0]['end']}}<br>
+      Location: 
+        {{ rest_info['location']['address1'] }}<br>
+        {{ rest_info['location']['city'] }}, {{ rest_info['location']['state'] }} 
+        {{ rest_info['location']['zip_code'] }}<br>  
       {% if "current_user" in session %}
       <br>
-      <button id="fav-restaurant" class="glyphicon glyphicon-thumbs-up" style="font-size:24px" value="{{ exist_rest.restaurant_id}}"></button>
+      <button id="like-it" name="like" value="{{ exist_rest.restaurant_id}}">
+        <span class="glyphicon glyphicon-thumbs-up" style="font-size:24px"></span> Like
+      </button>
       {% endif %}
     </div>
     <div id="map" class="col-xs-5"></div>
@@ -77,8 +82,14 @@
       });
     }
     </script>
-
+  <div class="row">
+    <div class="col-xs-4">
+       <b>Comments from Users:</b>
+    {% for comment in comments %}
+        <br><b>{{ comment.user.username }}</b> - "{{ comment.comment }}"
+        {% endfor %}
+    </div>
   </div>
-</div>    
+  </div>    
 {% endblock %}
 
