--- a/templates/profile.html
+++ b/templates/profile.html
@@ -4,7 +4,7 @@
 <br>
 <div class="row">
   <div class="well spaced" style="width:80%">
-    <div class=col-xs-6>
+    <div class=col-md-6>
       <a href="/list_favlist/{{ user.user_id }}">My Favorites</a><br>
     </div>
   </div>
