--- a/static/css/map.css
+++ b/static/css/map.css
@@ -3,10 +3,9 @@
     height: 300px;
   }
   html, body {
-    height: 100%; margin: 30px; padding: 10px;
+    height: 100%; 
+    margin: 30px; 
+
   }
-  #restaurant-pic{
-    width:300px;
-    height:300px;
-  }
+
 </style>
