--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -1,24 +1,27 @@
 {% extends "base.html" %}
 
 {% block content %}
-{% if "current_user" in session %}
-  <a href="/profile/{{ user.user_id }}"><b>My Account</b></a>
-  <form action="/logout" method="POST">
-    <input type="submit" value="Sign out">
-  </form>
-{% else %}
-  <form action="/login" method="GET">
-    <input type="submit" value="Sign in">
-  </form>
-{% endif %}
-
-  <form action="/search" method="POST">
-    <input type="text" name="search-form">
-    <input type="submit" value="Search">
-  </form>    
-  <h1>Mingle with Asian Food Lovers in the Bay.</h1>
-
-  <form action="/restaurant_list" method="POST">
+<div class="row">
+  <div class="col-md-5 col-sm-5 col-xs-5">
+    <ul class="nav nav-pills">
+      <li>
+      <form action="/search" method="POST">
+        <input type="text" name="search-form">
+      <input type="submit" value="Search">
+      </form>
+      </li>  
+      {% if "current_user" in session %}
+      <li><a href="/profile/{{ user.user_id }}">My Account</a></li>
+      <li>
+      <form action="/logout" method="POST">
+        <input type="submit" value="Log out">
+      </form>
+      </li>
+      {% else %}
+      <li><a href="/login">Log In</a></li>
+      {% endif %}
+    </ul>
+    <form action="/restaurant_list" method="POST">
     Choose Your Cuisine of the Day!
     <select name="cuisine-type">
       <option value="Japanese">Japanese</option>
@@ -30,6 +33,8 @@
       <option value="Middle Eastern">Middle Eastern</option>
     </select>
     <input id="cuisine-btn" type="submit" value="Check it out!">
-  </form>
+    </form>
+  </div>
+</div>
 
 {% endblock %}
