--- a/templates/my_favorite.html
+++ b/templates/my_favorite.html
@@ -3,6 +3,14 @@
 {% block content %}
 <h2>Restaurants Marked as Favorites</h2>
 {% for restaurant in restaurants %}
-<b><li><a href="/search_restaurant/{{ restaurant.restaurant_id }}">{{ restaurant.name }}</a></li></li></b>
+<div class="col-xs-8">
+<li>
+  <a href="/search_restaurant/{{ restaurant.restaurant_id }}">{{ restaurant.name }}</a>
+  <span><form action="/remove_favor/{{ restaurant.restaurant_id }}" method="POST">
+    <input type="submit" value="Remove">
+  </form></span>
+</li>
+</div>
 {% endfor %}
+
 {% endblock %}
