--- a/templates/base.html
+++ b/templates/base.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Pocket Asia</title>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
-  <link rel="stylesheet" href="static/css/base.css">
+  <link rel="stylesheet" href="/static/css/base.css">
 </head>
 
 
@@ -38,7 +38,9 @@
 
   <!--Javascript-->
   <script type="text/javascript" src="https://code.jquery.com/jquery.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
   <script type="text/javascript" src="/static/js/favorite.js"></script>
   <script type="text/javascript" src="/static/js/numLike.js"></script>
+  <script type="text/javascript" src="/static/js/addRestaurant.js"></script>
 </body>
 </html>
