--- a/templates/search_result.html
+++ b/templates/search_result.html
@@ -3,56 +3,60 @@
 {% block content %}
 <!--Add button for creating new restaurants.-->
 <div class="row">
-  <div class="col-md-6">
-    <h2>Below is the list of possible users to match your search</h2>
-    <button class="btn btn-default" data-toggle="collapse">Can't find you restaurant?</button>
-    <form action="/add_restaurant" class="form collapse" id="add-restaurant" method="POST">
-      <br>
-      <div class="form-group">
-        <input type="text" name="address" class="form-control" placeholder="Address">
-      </div>
-      <div class="form-group">
-        <input type="text" name="city" class="form-control" placeholder="City">
-      </div>
-      <div class="form-group">
-        <input type="text" name="state" class="form-control" placeholder="State">
-      </div>
-      <div class="form-group">
-        <input type="text" name="country" class="form-control" placeholder="Country">
-      </div>
-      <div class="form-group">
-          <input type="submit" class="btn btn-default btn-block" value="Add">
-      </div>
-    </form>
+  <div class="col-md-12">
+    <div class="col-md-8">
+      <button class="btn btn-default" data-toggle="collapse" data-target="#new-rest">Can't find you restaurant?</button>
+      <form class="form-collapse" id="new-rest" action="/add_restaurant.json" method="POST">
+        <div class="form-group">
+          <input type="text" name="name" class="form-control input-sm" placeholder="Restaurant Name">
+        <!-- </div>
+        <div class="form-group">
+          <input type="text" name="address" class="form-control input-sm" placeholder="Address">
+        </div>
+        <div class="form-group">
+          <input type="text" name="city" class="form-control input-sm" placeholder="City">
+        </div>
+        <div class="form-group">
+          <input type="text" name="state" class="form-control input-sm" placeholder="State">
+        </div> -->
+        <div class="form-group">
+          <input type="submit" class="btn btn-default btn-block" value="Let's look it up!">
+        </div>
+      </form>
+      {% if not exist_restaurants and not exist_usernames %}
+      <h3>Sorry, we don't have this in record. Please try again.</h3>
+      {% endif %}
+    </div>
   </div>
 </div>
 {% if exist_restaurants %}
 <div class="row">
-  <div class="col-md-10">
-    <h2>Restaurants Which Match Your Search:</h2>
-    {% for restaurant in exist_restaurants %}
+  <div class="col-md-12">
+    <div class="col-md-9">
+      <h2>Restaurants Which Match Your Search:</h2>
+      <div class="col-md-8" id="div1"></div>
+      <hr>
+      {% for restaurant in exist_restaurants %}
+        <div class="col-md-4">
+        <a href="/search_restaurant/{{ restaurant.restaurant_id }}"><br>
+          <img src="{{ restaurant.image }}" height="150px" width="200px">
+          <br>{{ restaurant.name }}
+        </a>
+        </div>
+      {% endfor %}
+      {% endif %}
+    </div>
     <div class="col-md-3">
-      <a href="/search_restaurant/{{ restaurant.restaurant_id }}">
-        <img src="/static/img/randomtaichi.jpeg" height="70px" width="70px">
-        <br>{{ restaurant.name }}
-      </a>
-      </div>
-    {% endfor %}
-    {% endif %}
-    <div class="col-md-3">
-    {% if exist_usernames %}
-    <h2>Users Who Match Your Search:</h2>
-    {% for username in exist_usernames %}
+      {% if exist_usernames %}
+      <h3>Users Who Match Your Search:</h3>
+      {% for username in exist_usernames %}
       <li>
         <a href="/profile/{{ username.user_id }}">{{ username.username }}</a>
       </li>
-    {% endfor %}
-    {% endif %}
+      {% endfor %}
+      {% endif %}
     </div>
   </div>
-    {% if not exist_restaurants and not exist_usernames %}
-      <h3>Sorry, we don't have this in record. Please try again.</h3>
-    {% endif %}
   </div>
 </div>
 {% endblock %}
