--- a/templates/base.html
+++ b/templates/base.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Pocket Asia</title>
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   <link rel="stylesheet" href="/static/css/base.css">
 </head>
 
@@ -37,10 +37,11 @@
   <div>
 
   <!--Javascript-->
-  <script type="text/javascript" src="https://code.jquery.com/jquery.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
   <script type="text/javascript" src="/static/js/favorite.js"></script>
   <script type="text/javascript" src="/static/js/numLike.js"></script>
+  <script type="text/javascript" src="/static/js/homepage.js"></script>
   <script type="text/javascript" src="/static/js/addRestaurant.js"></script>
 </body>
 </html>
