--- a/templates/make_comments.html
+++ b/templates/make_comments.html
@@ -7,7 +7,7 @@
   <form action="/comments/{{ restaurant_id }}" method="POST">
     <h2>What do you think about this restaurant?</h2>
     <div>
-      <textarea name="user-comment" rows="5" cols="60""></textarea>
+      <textarea name="user-comment" rows="5" cols="60"></textarea>
     </div>
     <input type="submit" value="Post!">
   </form>
