--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -2,14 +2,16 @@
 
 {% block content %}
 <div class="row">
-  <div class="col-md-5 col-sm-5 col-xs-5">
+  <div class="col-md-12">
     <ul class="nav nav-pills">
       <li>
       <form action="/search" method="POST">
         <input type="text" name="search-form">
-      <input type="submit" value="Search">
+      <input type="submit" value="Search for Restaurants or Users">
       </form>
       </li>  
+
+      <!--limiting non-users to access personal profiles-->
       {% if "current_user" in session %}
       <li><a href="/profile/{{ user.user_id }}">My Account</a></li>
       <li>
@@ -21,9 +23,9 @@
       <li><a href="/login">Log In</a></li>
       {% endif %}
     </ul>
-    <form action="/restaurant_list" method="POST">
+    <form class="cuisine-form" action="/restaurant_list" method="POST">
     Choose Your Cuisine of the Day!
-    <select name="cuisine-type">
+    <select name="cuisine-type" id="select-val">
       <option value="Japanese">Japanese</option>
       <option value="Chinese">Chinese</option>
       <option value="Korean">Korean</option>
@@ -36,5 +38,74 @@
     </form>
   </div>
 </div>
+<hr>
+
+<!-- Homepage Carousel -->
+<div class="row">
+  <div id="myCarousel" class="carousel slide" data-ride="carousel">
+    <!-- Indicators -->
+    <ol class="carousel-indicators">
+      <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+      <li data-target="#myCarousel" data-slide-to="1"></li>
+      <li data-target="#myCarousel" data-slide-to="2"></li>
+      <li data-target="#myCarousel" data-slide-to="3"></li>
+      <li data-target="#myCarousel" data-slide-to="4"></li>
+      <li data-target="#myCarousel" data-slide-to="5"></li>
+      <li data-target="#myCarousel" data-slide-to="6"></li>
+    </ol>
+
+    <!-- Wrapper for slides -->
+    <div class="carousel-inner" role="listbox">
+
+      <div class="item active">
+        <img src="img_chania.jpg" alt="Chania" width="460" height="345">
+        <div class="carousel-caption">
+          <h3>Chania</h3>
+          <p>The atmosphere in Chania has a touch of Florence and Venice.</p>
+        </div>
+      </div>
+
+      <div class="item">
+        <img src="img_chania2.jpg" alt="Chania" width="460" height="345">
+        <div class="carousel-caption">
+          <h3>Chania</h3>
+          <p>The atmosphere in Chania has a touch of Florence and Venice.</p>
+        </div>
+      </div>
+    
+      <div class="item">
+        <img src="img_flower.jpg" alt="Flower" width="460" height="345">
+        <div class="carousel-caption">
+          <h3>Flowers</h3>
+          <p>Beatiful flowers in Kolymbari, Crete.</p>
+        </div>
+      </div>
+
+      <div class="item">
+        <img src="img_flower2.jpg" alt="Flower" width="460" height="345">
+        <div class="carousel-caption">
+          <h3>Flowers</h3>
+          <p>Beatiful flowers in Kolymbari, Crete.</p>
+        </div>
+      </div>
+  
+    </div>
+
+    <!-- Left and right controls -->
+    <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
+      <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+      <span class="sr-only">Previous</span>
+    </a>
+    <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
+      <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+      <span class="sr-only">Next</span>
+    </a>
+  </div>
+</div>
+
+
+  <img src="/static/img/randomtaichi.jpeg">
+</div>
+
 
 {% endblock %}
