--- a/templates/search_result.html
+++ b/templates/search_result.html
@@ -5,20 +5,44 @@
 <div class="row">
   <div class="col-md-12">
     <div class="col-md-8">
-      <button class="btn btn-default" data-toggle="collapse" data-target="#new-rest">Can't find you restaurant?</button>
-      <form class="form-collapse" id="new-rest" action="/add_restaurant.json" method="POST">
+      <button class="btn btn-default collapsed" data-toggle="collapse" data-target="#new-rest">Can't Find What You Want?</button>
+      <form class="form-collapse collapse" id="new-rest" action="/add_restaurant.json" method="POST">
         <div class="form-group">
           <input type="text" id="name" class="form-control input-sm" placeholder="Restaurant Name">
         </div>
+        <!--Modal button-->
         <div class="form-group">
-          <input type="submit" class="btn btn-default btn-block" value="Let's look it up!">
+          <button type="button" class="btn btn-info btn-md" id="myBtn">Let's look it up!</button>
+          <!-- <input type="submit" class="btn btn-default btn-block" value="Let's look it up!"> -->
         </div>
-      <!--restaurants about to be added-->
-        <div id="out"></div>
+        <!-- <span id='div2'></span> -->
+      </form> 
 
-      </form>
+  <!-- Modal -->
+  <div class="modal fade" id="myModal" role="dialog">
+    <div class="modal-dialog">
+    
+      <!-- Modal content-->
+      <div class="modal-content">
+        <div class="modal-header">
+          <button type="button" class="close" data-dismiss="modal">&times;</button>
+          <h4 class="modal-title">Please confirm so we know you are not a robot.</h4>
+        </div>
+        <div class="modal-body">
+          <div id="restaurant" style="border:1px solid black; padding:20px;">
+          </div>
+          <img src=" ">
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-ar btn-default" data-dismiss="modal">Oops, just kidding.</button>
+          <button type="button" class="btn btn-ar btn-primary" id="confirm">I'm not a robot, please add it!</button>
+        </div>
+      </div>
+
+
       {% if not exist_restaurants and not exist_usernames %}
       <h3>Sorry, we don't have this in record. Please try again.</h3>
+      <br>
       {% endif %}
     </div>
   </div>
@@ -28,13 +52,15 @@
   <div class="col-md-12">
     <div class="col-md-9">
       <h2>Restaurants Which Match Your Search:</h2>
-      <div class="col-md-8" id="div1"></div>
+
+      <!--restaurants about to be added-->
+      
       <hr>
       {% for restaurant in exist_restaurants %}
-        <div class="col-md-4">
+        <div class="col-md-4" id="fixed-div">
         <a href="/search_restaurant/{{ restaurant.restaurant_id }}"><br>
           <img src="{{ restaurant.image }}" height="150px" width="200px">
-          <br>{{ restaurant.name }}
+          <br>{{ restaurant.name }}<br>
         </a>
         </div>
       {% endfor %}
@@ -53,4 +79,5 @@
   </div>
   </div>
 </div>
+      
 {% endblock %}
