Finished carousel on front page and used recursion to populate some user comments.

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -55,6 +55,8 @@ ul#Navi li {
 
 .carousel-inner > .item > img,
 .carousel-inner > .item > a > img {
-  width: 70%;
+  width: 730px;
+  height: 435px;
   margin: auto;
+  overflow: auto;
 }
