--- a/templates/base.html
+++ b/templates/base.html
@@ -41,7 +41,7 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
   <script type="text/javascript" src="/static/js/favorite.js"></script>
   <script type="text/javascript" src="/static/js/numLike.js"></script>
-  <script type="text/javascript" src="/static/js/homepage.js"></script>
+  <script type="text/javascript" src="/static/js/removeComment.js"></script>
   <script type="text/javascript" src="/static/js/addRestaurant.js"></script>
 </body>
 </html>
