--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -23,7 +23,7 @@
       <li><a href="/login">Log In</a></li>
       {% endif %}
     </ul>
-    <form class="cuisine-form" action="/restaurant_list.json" method="POST">
+    <form class="cuisine-form" action="/restaurant_list" method="POST">
     Choose Your Cuisine of the Day!
     <select name="cuisine-type" id="select-val">
       <option value="Japanese">Japanese</option>
@@ -34,7 +34,7 @@
       <option value="Thai">Thai</option>
       <option value="Middle Eastern">Middle Eastern</option>
     </select>
-    <input id="cuisine-btn" type="submit" value="Check it out!">
+    <input type="submit" value="Check it out!">
     </form>
   </div>
 </div>
@@ -57,42 +57,23 @@
     <!-- Wrapper for slides -->
     <div class="carousel-inner" role="listbox">
       <div class="item active">
-        <img src="img_flower.jpg" alt="Flower" width="460" height="345">
+        <img src="static/img/picforcarousel.jpg" alt="Japanese" height="200px" width="300px">
         <div class="carousel-caption">
-          <h3>Flowers</h3>
-          <p>Beatiful flowers in Kolymbari, Crete.</p>
+          <h3>Foodie Critic!</h3>
         </div>
       </div>
-
-    {% for cuisine, restaurant in restaurants.items() %}
+ 
+  {% for cuisine, restaurant in restaurants.items() %}
       <div class="item">
-        <img src={{ restaurant.image }} alt={{ cuisine }} width="250" height="150">
+        <img src={{ restaurant.image }} alt={{ restaurant.name }} height="200px" width="300px">
         <div class="carousel-caption">
           <h3>{{ restaurant.name }}</h3>
-          {% for comment in comments %}
-          <p>{{ comment }}</p>
-          {% endfor %}
+          <p>{{ comments.comment }}</p>
         </div>
       </div>
-    {% endfor %}
-    
-     <!--  <div class="item">
-        <img src="img_flower.jpg" alt="Flower" width="460" height="345">
-        <div class="carousel-caption">
-          <h3>Flowers</h3>
-          <p>Beatiful flowers in Kolymbari, Crete.</p>
-        </div> -->
-     <!--  </div>
-
-      <div class="item">
-        <img src="img_flower2.jpg" alt="Flower" width="460" height="345">
-        <div class="carousel-caption">
-          <h3>Flowers</h3>
-          <p>Beatiful flowers in Kolymbari, Crete.</p>
-        </div>
-      </div> -->
+  {% endfor %}
   
-    </div>
+</div>
 
     <!-- Left and right controls -->
     <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
