--- a/templates/search_result.html
+++ b/templates/search_result.html
@@ -6,17 +6,15 @@
   <div class="col-md-12">
     <div class="col-md-8">
       <button class="btn btn-default collapsed" data-toggle="collapse" data-target="#new-rest">Can't Find What You Want?</button>
-      <form class="form-collapse collapse" id="new-rest" action="/add_restaurant.json" method="POST">
         <div class="form-group">
           <input type="text" id="name" class="form-control input-sm" placeholder="Restaurant Name">
         </div>
+
         <!--Modal button-->
         <div class="form-group">
           <button type="button" class="btn btn-info btn-md" id="myBtn">Let's look it up!</button>
-          <!-- <input type="submit" class="btn btn-default btn-block" value="Let's look it up!"> -->
         </div>
-        <!-- <span id='div2'></span> -->
-      </form> 
+ 
 
   <!-- Modal -->
   <div class="modal fade" id="myModal" role="dialog">
@@ -28,14 +26,23 @@
           <button type="button" class="close" data-dismiss="modal">&times;</button>
           <h4 class="modal-title">Please confirm so we know you are not a robot.</h4>
         </div>
-        <div class="modal-body">
-          <div id="restaurant" style="border:1px solid black; padding:20px;">
+        <br>
+        <div class="modal-body" style="border:1px solid black;">
+          <div class="col-xs-12">
+            <div class="col-xs-5">
+              <img id="img1" src="static/img/randomtaichi.jpeg" height="150px" width="150px">
+            </div>
+            <div class="col-xs-7">
+              Name: <b><p id="restaurant"></p></b>
+              Location: <p id="address"></p>
+                        <p id="citystate"></p>
+              Phone: <p id="phone"></p>
+            </div>
           </div>
-          <img src=" ">
-        </div>
-        <div class="modal-footer">
-          <button type="button" class="btn btn-ar btn-default" data-dismiss="modal">Oops, just kidding.</button>
-          <button type="button" class="btn btn-ar btn-primary" id="confirm">I'm not a robot, please add it!</button>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-ar btn-default" data-dismiss="modal">Oops, just kidding.</button>
+            <button type="button" class="btn btn-ar btn-primary" id="confirm">I'm not a robot, please add it!</button>
+          </div>
         </div>
       </div>
 
@@ -44,7 +51,6 @@
       <h3>Sorry, we don't have this in record. Please try again.</h3>
       <br>
       {% endif %}
-    </div>
   </div>
 </div>
 {% if exist_restaurants %}
